--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,5 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
+# Warning: Adding highlighter will cause page build failure on github pages.
 markdown: kramdown
