create homepage layout

--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,15 @@
 title: philgrayphilgray
 email: philgrayphilgray@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Phil Gray is a writer, musician, web designer, and art and technology enthusiast.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+paginate: 2
+twitter_username:
+github_username:
+bandcamp_username: http://floraflora.bandcamp.com/
+linkedin_url: http://www.linkedin.com/in/philgrayphilgray
+
 
 # Build settings
 # Warning: Adding highlighter will cause page build failure on github pages.
