--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,11 @@
 title: philgrayphilgray
 email: philgrayphilgray@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Phil Gray is a writer, musician, web designer, and thought experimentalist.
+  Phil Gray is a writer, musician, and web developer.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-paginate: 2
+paginate: 3
+paginate_path: "/page:num/"
 twitter_username:
 github_username:
 bandcamp_username: http://floraflora.bandcamp.com/
