--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: philgrayphilgray@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Phil Gray is a writer, musician, and web developer.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://philgrayphilgray.com" # the base hostname & protocol for your site
 paginate: 3
 paginate_path: "/page:num/"
 twitter_username:
